--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -1,7 +1,34 @@
 .logo {
     font-size: 34.375px;
+    margin: 0;
+    position: absolute;
+
+     
 }
 
 .comercial {
     color: #FFB9AF;
 }
+
+.menu{
+    display: flex;
+    justify-content: space-between                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    ;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    width: 570px; 
+   
+
+} 
+
+.itemMenu {
+    font-family: Montserrat;
+    font-size: 24.527px;
+    font-weight: 500;
+    margin: 0;
+    
+}
+
+  
+
